# gen_smooth

./: Cargo.toml
src/: composite.rs  main.rs  smooths.rs
