[package]
name = "gen_smooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.3.2"
once_cell = "1.17.1"
integer-sqrt = "0.1.5"
rayon = "1.7.0"

[profile.release]
lto = true
codegen-units = 1

[workspace]
